--- a/public_html/blog.html
+++ b/public_html/blog.html
@@ -16,8 +16,7 @@
 </head>
 
 
-<body>
-<!-- Page Navigation -->
+<body data-spy="scroll" data-target=".navbar" data-offset="40" id="home"><!-- Page Navigation -->
 <nav class="navbar custom-navbar navbar-expand-lg navbar-dark" data-spy="affix" data-offset-top="20">
     <div class="container">
         <a class="navbar-brand" href="#">
@@ -30,39 +29,54 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" target="_blank" href="index.html#home">Home</a>
+                    <a class="nav-link" href="index.html#home">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" target="_blank" href="index.html#about">About</a>
+                    <a class="nav-link" href="index.html#about">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" target="_blank" href="services.html">Service</a>
+                    <a class="nav-link" href="services.html">Service</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" target="_blank" href="portfolio.html">Portfolio</a>
+                    <a class="nav-link" href="portfolio.html">Portfolio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" target="_blank" href="index.html#team">Team</a>
+                    <a class="nav-link" href="index.html#team">Team</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" target="_blank" href="index.html#testimonial">Testimonial</a>
+                    <a class="nav-link" href="index.html#testimonial">Testimonial</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" target="_blank" href="blog.html">Blog</a>
+                    <a class="nav-link" href="blog.html">Blog</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" target="_blank" href="contact.html">Contact</a>
+                    <a class="nav-link" href="contact.html">Contact</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link btn btn-primary btn-sm ml-lg-3" href="components.html">Components</a>
+                    <a class="nav-link" href="inscription.html">Register</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="connexion.html">Login</a>
             </ul>
         </div>
     </div>
 </nav>
 <!-- End Of Page Navigation -->
 
+<!-- Page Header -->
+<header class="header">
+    <div class="overlay">
+        <h1 class="title">Blog</h1>
+        <div class="buttons text-center">
+            <a href="services.html" class="btn btn-primary rounded w-lg btn-lg my-1">Our Service</a>
+            <a href="contact.html" class="btn btn-outline-light rounded w-lg btn-lg my-1">Contact Us</a>
+        </div>
+    </div>
+</header>
+<!-- End Of Page Header -->
+
 <!-- Blog Section -->
+<section class="section">
     <div class="container">
         <h6 class="section-subtitle text-center">News Feeds</h6>
         <h6 class="section-title mb-6 text-center">Our Blog</h6>
@@ -179,7 +193,5 @@
     </div>
 </section>
 
-</body>
-</html>
 </body>
 </html>
